Make debug component hidden by default & fix java doc